--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,19 +3,19 @@
         <div class="rel col-lg-10 bhoechie-tab-container">
             <div class="rel col-lg-1 bhoechie-tab-menu">
               <div class="list-group">
-                <a href="#" onclick="changeTab(event);" class="list-group-item active text-center">
+                <a href="#"  class="list-group-item active text-center">
                   2015
                 </a>
-                <a href="#" onclick="changeTab(event);" class="list-group-item text-center">
+                <a href="#"  class="list-group-item text-center">
                   2016
                 </a>
-                <a href="#" onclick="changeTab(event);" class="list-group-item text-center">
+                <a href="#"  class="list-group-item text-center">
                   2017
                 </a>
-                <a href="#" onclick="changeTab(event);" class="list-group-item text-center">
+                <a href="#"  class="list-group-item text-center">
                   2018
                 </a>
-                <a href="#" onclick="changeTab(event);" class="list-group-item text-center">
+                <a href="#"  class="list-group-item text-center">
                   2019
                 </a>
               </div>
